...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="45dp"
        android:text="@string/title_filter"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sortby_button"
        android:layout_width="wrap_content"
...
