...

    </ScrollView>
    <Button
    android:id="@+id/button_ok"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="OK" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel" />
...
