...
            android:text="@string/back"
            android:textSize="18sp">

        </Button>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="18sp">

...
