...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FEFEFE" />

    <Button
        android:id="@+id/camera_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="86dp"
        android:layout_height="94dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="2dp"
        android:scaleX="0.8"
...
        app:layout_constraintEnd_toEndOf="@+id/button_border"
        app:layout_constraintStart_toStartOf="@+id/button_border"
        app:layout_constraintTop_toTopOf="@+id/button_border"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/photos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="App Photos"
        android:translationY="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
